# Desktop-task-reminder-based-on-QT5

./: .gitignore  CMakeLists.txt
Sources/: main.cpp
Sources/Forms/: Mainwindows.cpp  Mainwindows.ui  Taskdialog.cpp  Taskdialog.ui  add.cpp  add.ui
Sources/Headers/: Mainwindows.h  Taskdialog.h  add.h
cmake/: QtRuntimeUtils.cmake
